# CMake-Tutorial

./: README.md  SummaryDocumentation.txt
Version 1/: CMakeLists.txt  Demo1.cpp
Version 2/: CMakeLists.txt
Version 2/include/: CustomPackage.h
Version 3/: CMakeLists.txt
Version 3/include/: CustomPackage.h
Version 3/source/: CustomPackage.cpp
Version 4/: CMakeLists.txt
Version 5/: CMakeLists.txt  Demo5.cpp
Version 5/CustomLibrary/: CMakeLists.txt
Version 6/: CMakeLists.txt  Demo6.cpp
